# prog2006

./: Readme.md
hello-chuck/: README.md  hello-chuck.cabal
hello-chuck-go/: go.mod  main.go
hello-chuck-haskell/: package.yaml
hello-chuck-haskell/app/: Main.hs
hello-chuck-haskell/src/: Lib.hs
hello-chuck-rust/: Cargo.toml
hello-chuck-rust/src/: main.rs
hello-chuck/src/: Lib.hs
hello-haskell/: .gitignore  Readme.md  hello-haskell.cabal  package.yaml
hello-haskell/app/: Main.hs
hello-haskell/src/: Lib.hs  Tasks.hs
hello-haskell/test/: Spec.hs
lecture-three/: .gitignore  ChangeLog.md  README.md  lecture-three.cabal  package.yaml
lecture-three/app/: Main.hs
lecture-three/src/: Lib.hs  Math.hs
lecture-three/test/: Spec.hs
rpn-calc/: package.yaml  rpn-calc.cabal
rpn-calc/src/: Lib.hs
rust/collections/: Cargo.toml
rust/error_handling/: .gitignore  Cargo.toml
rust/ownership/: .gitignore  Cargo.toml  Readme.md
rust/packaging/: .gitignore  Cargo.toml
students/: ChangeLog.md  README.md  package.yaml
students-c/: .gitignore  main.c  stud_db.c  stud_db.h
students-cpp/: Readme.md  students.cpp
students-gen-rust/: .gitignore  Cargo.toml
students-go/: .gitignore  main.go
students-haskell/: .gitignore  README.md
students-python/: students.py
students-rust/: Cargo.toml
students/c/: CMakeLists.txt  main.c
students/generator-rust/: Cargo.toml  Readme.md
tic-tac-roll/: LICENSE  README.md  package.yaml  tic-tac-roll.cabal
zmq-demo/: ChangeLog.md  README.md  package.yaml  zmq-demo.cabal
zmq-go/: .gitignore  go.mod  main.go
(+31 files in other folders)
