[package]
name = "hello-chuck"
version = "0.1.0"
authors = ["Mariusz Nowostawski <nowostawski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
serde = { version="1.0.123", features = ["derive"] }
serde_json = "*"
