[package]
name = "error_handling"
version = "0.1.0"
authors = ["Carl Findahl <sportleroro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
rand = "0.8.3"
thiserror = "1.0.24"

[profile.release]
panic = 'abort'
