[package]
name = "students-gen-rust"
version = "0.2.0"
authors = ["Mariusz Nowostawski <nowostawski@gmail.com>", "Carl Findahl <sportleroro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0.38"
rand = "0.8.3"
